--- a/task-1/task-1-create-cnn.ipynb
+++ b/task-1/task-1-create-cnn.ipynb
@@ -88,7 +88,8 @@
    "source": [
     "<details>\n",
     "    <summary>Click for a hint #1</summary>\n",
-    "    <p>You can get the shapes using \"---.shape\" command. replace \"---\" with the variable that you wish to see it's shape.</p>\n",
+    "    <p>You can get the shapes using \"---.shape\" command.,</br>\n",
+    "    Replace \"---\" with the variable that you wish to see it's shape. (the varibles names can hint)</p>\n",
     "</details>"
    ]
   },
@@ -99,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_shape = None\n",
-    "test_shape = None"
+    "train_images_shape = None\n",
+    "test_images_shape = None"
    ]
   },
   {
@@ -110,7 +111,8 @@
    "source": [
     "<details>\n",
     "    <summary>Click for a hint #2</summary>\n",
-    "    <p>When using the \"images.shape\" the return value is an tuple with 4 cells, each one represent it's some info on the the images.</p>\n",
+    "    <p>When using the \"images.shape\" the return value is an tuple (a collection that resembles array) at size 4, each one represent it's some info on the the images.</br>\n",
+    "        Can approach the cells like when approching an array using \"x[i]\" (meaning cell \"i\" in the array x)</p>\n",
     "</details>"
    ]
   },
@@ -121,7 +123,8 @@
    "source": [
     "<details>\n",
     "    <summary>Click for a hint #3</summary>\n",
-    "    <p>Each cell in the \"images.shape\" tuple are representing: number of images, images height, images width, and images channles </p>\n",
+    "    <p>Each cell in the \"images.shape\" tuple are representing: number of images, images height, images width, and images channles (in this order)</br>\n",
+    "        Meaning that images.shape[0] = number of images </p>\n",
     "</details>"
    ]
   },
@@ -134,15 +137,15 @@
    "source": [
     "# Extracting dimensions and shapes\n",
     "\n",
-    "num_train_images = None[0]\n",
-    "train_image_height = None[1]\n",
-    "train_image_width = None[2]\n",
-    "train_channels = None[3]\n",
+    "num_train_images = None\n",
+    "train_image_height = None\n",
+    "train_image_width = None\n",
+    "train_channels = None\n",
     "\n",
-    "num_test_images = None[0]\n",
-    "test_image_height = None[1]\n",
-    "test_image_width = None[2]\n",
-    "test_channels = None[3]\n",
+    "num_test_images = None\n",
+    "test_image_height = None\n",
+    "test_image_width = None\n",
+    "test_channels = None\n",
     "\n",
     "num_classes = len(class_names)\n",
     "\n",
@@ -355,8 +358,35 @@
    "source": [
     "<details>\n",
     "    <summary>Click for a hint</summary>\n",
-    "    <p>In the input layer (first Conv2D) the input shape should be the (width,hight,channels) of a single img </br>\n",
-    "        In the output layer (last Dense) should be the number of classes.</p>\n",
+    "    <p>In the input convolutional layer (first Conv2D) the input shape should be the (width,hight,channels) of a of a single image (we alrady know it from before).</br>\n",
+    "        In the output layer (last Dense) should be the number of classes (we alrady know it from before, and the number of classes in).</p>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "498d93d7-0d95-4bd2-b2c4-c1bca8a68a1d",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Optional - Extra info</summary>\n",
+    "    <p>\n",
+    "        Start Building the Model: Think of model = Sequential() as starting to assemble a Lego structure, block by block.</br>\n",
+    "\n",
+    "First Layer - Seeing Basic Patterns: The first convolutional layer (Conv2D) with 32 filters looks at small parts of the image to identify basic patterns like edges. MaxPooling reduces the size of these patterns, focusing on the important features.</br>\n",
+    "\n",
+    "Second Layer - Seeing Complex Patterns: The second convolutional layer with 64 filters catches more complex patterns. Again, MaxPooling simplifies these patterns. Dropout randomly ignores some neurons, making the model more robust.</br>\n",
+    "\n",
+    "Third Layer - Refining the Analysis: Another convolutional layer and max pooling further refine the detected features, with another dropout for robustness.</br>\n",
+    "\n",
+    "Flattening: Flatten() converts the 2D feature maps into a 1D array, prepping the data for the next step.</br>\n",
+    "\n",
+    "Dense Layer - Decision Making: A dense layer with 64 units processes these features to start making decisions about the image.</br>\n",
+    "\n",
+    "Output Layer - Final Decision: The final dense layer gives the probability of the image belonging to one of the classes (like categories), using softmax activation.</br>\n",
+    "\n",
+    "Model Summary: model.summary() is like checking your finished Lego structure, showing how each block contributes to the overall model. </br>\n",
+    "     </p>\n",
     "</details>"
    ]
   },
@@ -404,11 +434,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28984943-7127-420c-9553-b7840d7af049",
+   "id": "25fa8680-202d-4eef-8d9d-e7b23bd04856",
    "metadata": {},
    "source": [
     "## Step 5: Compile the Model\n",
-    "Compile the model with an optimizer, loss function, and metrics"
+    "Compile the model with an optimizer, loss function, and metrics.</br>\n",
+    "<details>\n",
+    "    <summary>Optional - Extra info</summary>\n",
+    "    <p>\n",
+    "        Optimizer: It's like a GPS for a machine learning model, guiding it to improve its performance by adjusting its parameters.</br>\n",
+    "        Loss Function: This is the model's error calculator; it measures how far off its predictions are from the actual results.</br>\n",
+    "        Metrics: These are scorecards, used to evaluate and track how well the model performs on specific task. </br>\n",
+    "     </p>\n",
+    "</details>"
    ]
   },
   {
@@ -439,6 +477,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9cc8b33f-62b4-4009-a52c-b1b8b2fcb7db",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Click for a hint</summary>\n",
+    "    <p>Need to replace the Nones with this logic: None, None = train images after normalizing, train labels</p>\n",
+    "</details>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "304ab610-55aa-4f34-b243-05f025c66667",
@@ -466,10 +515,20 @@
    "metadata": {},
    "source": [
     "## Step 7: Evaluate the Model\n",
-    "\n",
     "Your Task: Evaluate the model on the test dataset.</br>\n",
     "For testing the model we will use the \".evaluate()\" function which takes the test images and test labels.</br>\n",
     "Replace the None with the correct values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0437d77d-9f23-43b6-8282-b4c4f60b9540",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Click for a hint</summary>\n",
+    "    <p>Need to replace the Nones with this logic: None, None = test images after normalizing, test labels</p>\n",
+    "</details>"
    ]
   },
   {
@@ -488,22 +547,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923f2bf5-2b8a-44f2-b394-b14fc7e26922",
-   "metadata": {},
-   "source": [
-    "## Improvment\n",
-    "Try to play with the numbers of epochs to get a better \"accuracy\" results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "66216b41-5ea6-47d9-a614-d7dfc8fd2631",
    "metadata": {},
    "source": [
     "## Step 8: Test it yourself!\n",
     "\n",
     "Your Task: Find an image of one classes and test the model.</br>\n",
-    "Replace the None with the correct values."
+    "Replace the None with the url of an image (use and image of one of the classes)."
    ]
   },
   {
@@ -536,9 +586,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba94cf67-6e0d-4550-adb9-81f9aa1dcb76",
+   "cell_type": "markdown",
+   "id": "340cea52-a6c7-4ff4-947b-9c4bd13685e0",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -546,8 +595,11 @@
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Improvment\n",
+    "Try to play with the numbers of epochs to get a better \"accuracy\" results!\n",
+    "For even more improvments can test other parameters like lerning rate, sizes of "
+   ]
   }
  ],
  "metadata": {
