--- a/task-1/task-1-create-cnn.ipynb
+++ b/task-1/task-1-create-cnn.ipynb
@@ -72,7 +72,26 @@
     "\n",
     "<img src=\"https://www.researchgate.net/publication/339435251/figure/fig1/AS:861467612028928@1582401292006/Color-image-and-RGB-matrices.jpg\" width=\"500\" hight=\"250\"> </br>\n",
     "Your Task: Get and print the train_images, train_labels, test_images, test_labels shapes.<br>\n",
-    "Replace the none with the corresponding command."
+    "Replace the none with the corresponding command. with others."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d990a893-557e-4330-afa3-d14ecd3c84e6",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Optional - Extra info</summary>\n",
+    "    <p>\n",
+    "        Data visualization is important because:</br>\n",
+    "<b>Quick Understanding:</b> Turns complex data into easy-to-understand visuals.</br>\n",
+    "<b>Spot Trends:</b> Easier to see patterns and trends in graphs than in numbers.</br>\n",
+    "<b>Effective Communication:</b> Visuals convey information quickly and clearly.</br>\n",
+    "<b>Better Decisions:</b> Helps in making informed decisions based on visual insights.</br>\n",
+    "<b>Surprise Findings:</b> Reveals insights that you might miss in raw data.</br>\n",
+    "It's like transforming numbers into a story that's much easier to understand and share with \n",
+    "     </p>\n",
+    "</details>"
    ]
   },
   {
@@ -149,8 +168,8 @@
     "\n",
     "num_classes = len(class_names)\n",
     "\n",
-    "validate_dataset_info(train_shape, num_train_images, train_image_height, train_image_width, train_channels, \n",
-    "                      test_shape, num_test_images, test_image_height, test_image_width, test_channels, \n",
+    "validate_dataset_info(train_images_shape, num_train_images, train_image_height, train_image_width, train_channels, \n",
+    "                      test_images_shape, num_test_images, test_image_height, test_image_width, test_channels, \n",
     "                      num_classes, train_images, test_images, train_labels,test_labels, class_names)"
    ]
   },
@@ -209,16 +228,15 @@
    "metadata": {},
    "source": [
     "### 3.1 Change data type\n",
+    "\n",
     "![image.png](attachment:c41084d6-a76c-4bd4-b567-af0d11fb0e2c.png)</br>\n",
     "<details>\n",
     "    <summary>Optional - Extra info</summary>\n",
     "    <p>\n",
-    "        uint8 Representation (Blue Bar): Since uint8 can only represent integers between 0 and 255, adding any value to 255 results in an overflow. In this case, the addition of 0.01 doesn't increase the value beyond 255 due to the integer nature and limited range of uint8.\r\n",
-    "\n",
-    "\r\n",
-    "float32 Representation (Green Bar): On the other hand, float32 can represent a much wider range of values, including fractions. When 0.01 is added to the normalized value (1.0), it accurately represents the new value (1.01), showcasing the precision and range capabilities of float32.\n",
-    "    </p></p>\n",
-    "</de type."
+    "        <b>uint8 Representation (Blue Bar):</b> Since uint8 can only represent integers between 0 and 255, adding any value to 255 results in an overflow. In this case, the addition of 0.01 doesn't increase the value beyond 255 due to the integer nature and limited range of uint8.</br>\n",
+    "        <b>float32 Representation (Green Bar):</b> On the other hand, float32 can represent a much wider range of values, including fractions. When 0.01 is added to the normalized value (1.0), it accurately represents the new value (1.01), showcasing the precision and range capabilities of float32.\n",
+    "    </p>\n",
+    "</details>e."
    ]
   },
   {
@@ -301,7 +319,8 @@
     "<img src=\"https://what-when-how.com/wp-content/uploads/2012/07/tmp26dc25_thumb2.png\" width=\"300\" hight=\"150\"> </br>\n",
     "![image.png](attachment:4a9c7b09-0989-4559-93bd-f52283a11ff4.png)</br>\n",
     "\n",
-    "by normalizing, we decrease the gap of the pixels values and compress them. this allows the model to work better since the whitest value is not as far from the darkest value. (instead 0-255 we will have 0-1). </br></br>\n",
+    "By normalizing, we decrease the gap of the pixels values and compress them.</br> \n",
+    "This allows the model to work better since the whitest value is not as far from the darkest value. (instead 0-255 we will have 0-1). </br></br>\n",
     "\n",
     "Your Task: Normalize the data to be between 0-1.</br>\n",
     "Replace the None with the correct value that need to dived by.</br>"
@@ -315,7 +334,7 @@
     "<details>\n",
     "    <summary>Click for a hint</summary>\n",
     "    <p>To normalize a value that is in the rage 0-1000 to 0-1 we need to divied by the max value in our range, that is 1000. </br>\n",
-    "        Exmaple: min value - 0/1000 = 0, mid value - 500/1000 = 0.5, max value - 1000/1000 = 1. </p>\n",
+    "        Exmaple: min value : 0/1000 = 0, mid value : 500/1000 = 0.5, max value : 1000/1000 = 1. </p>\n",
     "</details>"
    ]
   },
@@ -348,7 +367,33 @@
     "## Step 4: Build the Neural Network Model\n",
     "<img src=\"https://cezannec.github.io/assets/cnn_intro/CNN_ex.png\" width=\"500\" hight=\"250\"> </br>\n",
     "Your Task: Build the layers of the network.</br>\r\n",
-    "Replace the None with the correct valusy."
+    "Replace the None with the correctvaluey."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "498d93d7-0d95-4bd2-b2c4-c1bca8a68a1d",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "    <summary>Optional - Extra info</summary>\n",
+    "    <p>\n",
+    "        <b>Start Building the Model:</b> Think of model = Sequential() as starting to assemble a Lego structure, block by block.</br>\n",
+    "\n",
+    "<b>First Layer - Seeing Basic Patterns:</b> The first convolutional layer (Conv2D) with 32 filters looks at small parts of the image to identify basic patterns like edges. MaxPooling reduces the size of these patterns, focusing on the important features.</br>\n",
+    "\n",
+    "<b>Second Layer - Seeing Complex Patterns:</b> The second convolutional layer with 64 filters catches more complex patterns. Again, MaxPooling simplifies these patterns. Dropout randomly ignores some neurons, making the model more robust.</br>\n",
+    "<b>Third Layer - Refining the Analysis:</b> Another convolutional layer and max pooling further refine the detected features, with another dropout for robustness.</br>\n",
+    "\n",
+    "<b>Flattening:</b> Flatten() converts the 2D feature maps into a 1D array, prepping the data for the next step.</br>\n",
+    "\n",
+    "<b>Dense Layer - Decision Making:</b> A dense layer with 64 units processes these features to start making decisions about the image.</br>\n",
+    "\n",
+    "<b>Output Layer - Final Decision:</b> The final dense layer gives the probability of the image belonging to one of the classes (like categories), using softmax activation.</br>\n",
+    "\n",
+    "<b>Model Summary:</b> model.summary() is like checking your finished Lego structure, showing how each block contributes to the overall model. </br>\n",
+    "     </p>\n",
+    "</details>"
    ]
   },
   {
@@ -360,33 +405,6 @@
     "    <summary>Click for a hint</summary>\n",
     "    <p>In the input convolutional layer (first Conv2D) the input shape should be the (width,hight,channels) of a of a single image (we alrady know it from before).</br>\n",
     "        In the output layer (last Dense) should be the number of classes (we alrady know it from before, and the number of classes in).</p>\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "498d93d7-0d95-4bd2-b2c4-c1bca8a68a1d",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "    <summary>Optional - Extra info</summary>\n",
-    "    <p>\n",
-    "        Start Building the Model: Think of model = Sequential() as starting to assemble a Lego structure, block by block.</br>\n",
-    "\n",
-    "First Layer - Seeing Basic Patterns: The first convolutional layer (Conv2D) with 32 filters looks at small parts of the image to identify basic patterns like edges. MaxPooling reduces the size of these patterns, focusing on the important features.</br>\n",
-    "\n",
-    "Second Layer - Seeing Complex Patterns: The second convolutional layer with 64 filters catches more complex patterns. Again, MaxPooling simplifies these patterns. Dropout randomly ignores some neurons, making the model more robust.</br>\n",
-    "\n",
-    "Third Layer - Refining the Analysis: Another convolutional layer and max pooling further refine the detected features, with another dropout for robustness.</br>\n",
-    "\n",
-    "Flattening: Flatten() converts the 2D feature maps into a 1D array, prepping the data for the next step.</br>\n",
-    "\n",
-    "Dense Layer - Decision Making: A dense layer with 64 units processes these features to start making decisions about the image.</br>\n",
-    "\n",
-    "Output Layer - Final Decision: The final dense layer gives the probability of the image belonging to one of the classes (like categories), using softmax activation.</br>\n",
-    "\n",
-    "Model Summary: model.summary() is like checking your finished Lego structure, showing how each block contributes to the overall model. </br>\n",
-    "     </p>\n",
     "</details>"
    ]
   },
