--- a/task/1.2-task-data-preperation.ipynb
+++ b/task/1.2-task-data-preperation.ipynb
@@ -232,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_bad_samples(df,'income')"
+    "remove_bad_samples(df,'---')"
    ]
   },
   {
@@ -285,8 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_feature_distribution(df, 'income')\n",
-    "plot_feature_distribution(df, 'weight')"
+    "plot_feature_distribution(df, '---')\n",
+    "plot_feature_distribution(df, '---')"
    ]
   },
   {
@@ -296,10 +296,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_negative_samples(df, 'income')\n",
-    "remove_samples_below_threshold(df,'weight',20)\n",
-    "remove_outliers(df, 'income', method=\"IQR\")\n",
-    "remove_outliers(df, 'weight', method=\"IQR\")"
+    "remove_negative_samples(df, '---')\n",
+    "remove_samples_below_threshold(df,'---',20)\n",
+    "remove_outliers(df, '---', method=\"IQR\")\n",
+    "remove_outliers(df, '---', method=\"IQR\")"
    ]
   },
   {
@@ -309,8 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_feature_distribution(df, 'income')\n",
-    "plot_feature_distribution(df, 'weight')"
+    "plot_feature_distribution(df, '---')\n",
+    "plot_feature_distribution(df, '---')"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fill_strategy = {\"childrens\":'median', \"weight\":'mean', \"height\":'mean'}\n",
+    "fill_strategy = {'---':'median', '---':'mean', '---':'mean'}\n",
     "fix_vlues(df, fill_strategy)\n",
     "check_nulls_and_info(df)"
    ]
@@ -406,9 +406,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_feature(df, 'name')\n",
-    "remove_feature(df, 'last_name')\n",
-    "remove_feature(df, 'id')\n",
+    "remove_feature(df, '---')\n",
+    "remove_feature(df, '---')\n",
+    "remove_feature(df, '---')\n",
     "df.info()"
    ]
   },
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "convert_feature_to_numeric(df, 'married')"
+    "convert_feature_to_numeric(df, '---')"
    ]
   },
   {
