add more info to steps

--- a/task/1.2-task-data-preperation.ipynb
+++ b/task/1.2-task-data-preperation.ipynb
@@ -198,7 +198,9 @@
     "\n",
     "There should be one feature that is what we wish to predict.</br>\n",
     "Your task:</br>\n",
-    "Fill in the column name and run the functions.</br>\n",
+    "Fill in the column name and run the functions.</br>el training.</p>\r\n",
+    "</details>\n",
+    "\n",
     "\n",
     "<details>\n",
     "    <summary>Hint</summary>\n",
